# AI_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  training.py
src/: classificate.py  classificate_with_api.py  compare_models.py  training.py
